# MLOpsTemplate

./: Makefile  README.md  pyproject.toml  requirements-dev.yaml  requirements.yaml
tests/: conftest.py
tests/subpackage/: conftest.py
